Atualização do portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 <li>O programa em questão conta com uma interface gráfica para melhorar a experiência do usuário.</li>
                 <li>Ao desenvolver o programa em questão, eu utilizei o modelo MVC.</li>
             </ul>
-            <p><a href="https://github.com/lorenzofernandesaguiar/produtos-em-estoque">Clique aqui</a> para conhecer mais sobre este projeto.</p>
+            <p><a href="https://github.com/lorenzofernandesaguiar/produtos-em-estoque">Clique aqui</a> para conhecer mais sobre este programa.</p>
         </article>
     </main>
 </body>
