Altera o arquivo index.html
O arquivo index.html recebeu alterações. Sobre essas alterações, pode-se destacar a adição do tópico 1.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,92 @@
     <title>Portfólio de Lorenzo Fernandes Aguiar</title>
 </head>
 <body>
-    <p>Meu nome é Lorenzo Fernandes Aguiar</p>
+    <h1>Relato sobre o projeto Lista de tarefas</h1>
+    <p>Em julho do ano de 2024, eu, Lorenzo Fernandes Aguiar, concluí minha graduação em Análise e Desenvolvimento de Sistemas. Esse curso, que foi ofertado pela Universidade Estácio de Sá, permitiu que eu obtivesse os conhecimentos necessários para analisar, desenvolver, testar e manutenir um software.</p>
+    <p>Atualmente, eu realizo projetos pessoais voltados para a área de desenvolvimento de software. Faço isso com o intuito de ganhar a experiência que eu preciso para ingressar no mercado de trabalho como desenvolvedor de software.</p>
+    <p>Um desses projetos pessoais eu denominei de Lista de tarefas. Nesse projeto, eu utilizei habilidades e tecnologias que estão sendo bastante requisitadas pelo atual mercado de trabalho. Entre as habilidades e as tecnologias que eu utilizei durante o projeto Lista de tarefas, eu posso citar: programação orientada a objetos, API REST, Java, Spring Boot, bancos de dados relacionais, aplicação web e Angular.</p>
+    <p>Feita a introdução acima, agora eu explicarei o motivo pelo qual eu escrevo o presente texto. Eu escrevo o presente texto como forma de relatar as etapas que eu segui para finalizar o projeto Lista de tarefas. Através do presente texto eu busco comprovar minhas habilidades e meus conhecimentos para as empresas que estão precisando de um desenvolvedor de software.</p>
+    <p>Vale ressaltar que, por questões de organização, eu dividi o presente texto em tópicos e subtópicos. Esses tópicos e subtópicos podem ser vistos abaixo.</p>
+    <ul>
+        <li>Tópico 1: Levantamento de requisitos</li>
+        <li>Tópico 2: Git e GitHub</li>
+        <li>Tópico 3: Desenvolvimento da API REST</li>
+        <ul>
+            <li>Subtópico 3.1: Spring Initializr e Spring Tool Suite</li>
+            <li>Subtópico 3.2: Classe Tarefa</li>
+            <li>Subtópico 3.3: Classe TarefaDTO</li>
+            <li>Subtópico 3.4: Interface TarefaRepository</li>
+            <li>Subtópico 3.5: Arquivo application-local.properties</li>
+            <li>Subtópico 3.6: Classe TarefaService</li>
+            <li>Subtópico 3.7: Classe TarefaController</li>
+            <li>Subtópico 3.8: Classe WebConfiguration</li>
+        </ul>
+        <li>Tópico 4: Testes unitários para validar a API REST</li>
+        <ul>
+            <li>Subtópico 4.1: Classe TarefaRepositoryTest</li>
+            <li>Subtópico 4.2: Classe TarefaServiceTest</li>
+            <li>Subtópico 4.3: Classe TarefaControllerTest</li>
+            <li>Subtópico 4.4: Rodando os testes unitários para validar a API REST</li>
+        </ul>
+        <li>Tópico 5: Desenvolvimento do front-end da aplicação web</li>
+        <ul>
+            <li>Subtópico 5.1: Angular CLI e Visual Studio Code</li>
+            <li>Subtópico 5.2: Arquivo index.html</li>
+            <li>Subtópico 5.3: Arquivo styles.css</li>
+            <li>Subtópico 5.4: Arquivo tarefa.ts</li>
+            <li>Subtópico 5.5: Serviço e componentes</li>
+            <li>Subtópico 5.6: Arquivo app.routes.ts</li>
+            <li>Subtópico 5.7: Arquivo app.config.ts</li>
+            <li>Subtópico 5.8: Arquivo main.ts</li>
+            <li>Subtópico 5.9: Arquivo app.component.ts</li>
+            <li>Subtópico 5.10: Arquivo app.component.html</li>
+            <li>Subtópico 5.11: Arquivo app.component.css</li>
+            <li>Subtópico 5.12: Arquivo tarefa.service.ts</li>
+            <li>Subtópico 5.13: Arquivo lista-de-tarefas.component.ts</li>
+            <li>Subtópico 5.14: Arquivo lista-de-tarefas.component.html</li>
+            <li>Subtópico 5.15: Arquivo lista-de-tarefas.component.css</li>
+            <li>Subtópico 5.16: Arquivo adicionar-tarefa.component.ts</li>
+            <li>Subtópico 5.17: Arquivo adicionar-tarefa.component.html</li>
+            <li>Subtópico 5.18: Arquivo adicionar-tarefa.component.css</li>
+            <li>Subtópico 5.19: Arquivo editar-tarefa.component.ts</li>
+            <li>Subtópico 5.20: Arquivo editar-tarefa.component.html</li>
+            <li>Subtópico 5.21: Arquivo editar-tarefa.component.css</li>
+            <li>Subtópico 5.22: Arquivo excluir-tarefa.component.ts</li>
+            <li>Subtópico 5.23: Arquivo excluir-tarefa.component.html</li>
+            <li>Subtópico 5.24: Arquivo excluir-tarefa.component.css</li>
+        </ul>
+        <li>Tópico 6: Testes unitários para validar o front-end da aplicação web</li>
+        <ul>
+            <li>Subtópico 6.1: Arquivo app.component.spec.ts</li>
+            <li>Subtópico 6.2: Arquivo tarefa.spec.ts</li>
+            <li>Subtópico 6.3: Arquivo db.ts</li>
+            <li>Subtópico 6.4: Arquivo mocktarefaservice.ts</li>
+            <li>Subtópico 6.5: Arquivo tarefa.service.spec.ts</li>
+            <li>Subtópico 6.6: Arquivo lista-de-tarefas.component.spec.ts</li>
+            <li>Subtópico 6.7: Arquivo adicionar-tarefa.component.spec.ts</li>
+            <li>Subtópico 6.8: Arquivo editar-tarefa.component.spec.ts</li>
+            <li>Subtópico 6.9: Arquivo excluir-tarefa.component.spec.ts</li>
+            <li>Subtópico 6.10: Rodando os testes unitários para validar o front-end da aplicação web</li>
+        </ul>
+        <li>Tópico 7: Utilizando a aplicação web</li>
+        <li>Tópico 8: Considerações finais</li>
+    </ul>
+    <h2>Tópico 1: Levantamento de requisitos</h2>
+    <p>Abaixo estão listados os requisitos que eu identifiquei para o projeto Lista de tarefas.</p>
+    <ul>
+        <li>Requisito de número 1: O projeto Lista de tarefas deverá consistir no desenvolvimento de uma aplicação web.</li>
+        <li>Requisito de número 2: O front-end da aplicação web deverá ser construído com a utilização do framework Angular.</li>
+        <li>Requisito de número 3: O front-end da aplicação web deverá ser composto pela página principal, a página de adição de tarefa, a página de edição de tarefa e a página de exclusão de tarefa.</li>
+        <li>Requisito de número 4: A página principal terá como sua principal responsabilidade a exibição da lista contendo as tarefas salvas pelo usuário. A página principal também deve permitir que o usuário marque uma tarefa como concluída ou como não concluída.</li>
+        <li>Requisito de número 5: A página de adição de tarefa deverá permitir que o usuário adicione uma tarefa na lista.</li>
+        <li>Requisito de número 6: A página de edição de tarefa deverá permitir que o usuário edite uma tarefa da lista.</li>
+        <li>Requisito de número 7: A descrição de uma tarefa deve conter, no mínimo, 3 caracteres e, no máximo, 25 caracteres.</li>
+        <li>Requisito de número 8: A página de exclusão de tarefa deverá permitir que o usuário exclua uma tarefa da lista.</li>
+        <li>Requisito de número 9: O back-end da aplicação web deverá envolver um banco de dados criado no PostgreSQL e uma API REST, a qual também deverá ser desenvolvida.</li>
+        <li>Requisito de número 10: Cada tarefa tem um id, uma descrição e uma indicação se ela está ou não concluída.</li>
+        <li>Requisito de número 11: A API REST deverá ser construída com a utilização do Spring Framework em conjunto com a ferramenta Spring Boot.</li>
+        <li>Requisito de número 12: A API REST deverá ser capaz de fazer operações no banco de dados criado no PostgreSQL. Essas operações incluem a busca por todas as tarefas que estão salvas no banco de dados, a busca por uma tarefa específica que está salva no banco de dados, a adição de uma tarefa no banco de dados, a edição de uma tarefa que está salva no banco de dados e a exclusão de uma tarefa que está salva no banco de dados.</li>
+        <li>Requisito de número 13: O front-end da aplicação web deverá ser capaz de se comunicar com a API REST através de requisições HTTP. Essas requisições levarão a API REST a realizar as operações citadas no requisito de número 12.</li>
+    </ul>
 </body>
 </html>
