Altera o arquivo index.html
O arquivo index.html recebeu uma alteração. Essa alteração consistiu na adição de uma imagem. Essa imagem é uma captura de tela que mostra que foram bem sucedidos os testes unitários que devem validar o front-end da aplicação web.

--- a/index.html
+++ b/index.html
@@ -524,5 +524,6 @@
     <h3>Subtópico 6.10: Rodando os testes unitários para validar o front-end da aplicação web</h3>
     <p>Eu abri um terminal integrado dentro do Visual Studio Code e digitei o comando ng test. Feito isso, os testes unitários escritos ao longo dos tópicos anteriores começaram a rodar.</p>
     <p>Todos os testes obtiveram sucesso, conforme pode ser visto na captura de tela abaixo.</p>
+    <img src="imagens/testes-frontend.PNG" alt="Essa captura de tela mostra que foram bem sucedidos os testes unitários que devem validar o front-end da aplicação web">
 </body>
 </html>
