--- a/index.html
+++ b/index.html
@@ -529,51 +529,51 @@
     <p>Depois de concluir todas as etapas do projeto Lista de tarefas, eu resolvi utilizar a aplicação web do projeto Lista de tarefas.</p>
     <p>Primeiramente, eu comecei a rodar a API REST do projeto Lista de tarefas. Para isso, eu, dentro do meu workspace do Spring Tool Suite, tomei providências para que a API REST fosse rodada com o perfil local.</p>
     <p>A captura de tela abaixo mostra o console do Spring Tool Suite depois que eu rodei a API REST do projeto Lista de tarefas.</p>
-    <img src="imagens/topico-7-imagem-1.PNG" alt="Essa captura de tela mostra o console do Spring Tool Suite depois que eu rodei a API REST do projeto Lista de tarefas">
+    <img src="imagens/topico-7-imagem-1.png" alt="Essa captura de tela mostra o console do Spring Tool Suite depois que eu rodei a API REST do projeto Lista de tarefas">
     <p>Em seguida, eu comecei a rodar o front-end da aplicação web do projeto Lista de tarefas. Para isso, eu, dentro do Visual Studio Code, abri um terminal integrado e digitei o comando ng serve.</p>
     <p>A captura de tela abaixo mostra o terminal do Visual Studio Code depois que eu rodei o front-end da aplicação web do projeto Lista de tarefas.</p>
-    <img src="imagens/topico-7-imagem-2.PNG" alt="Essa captura de tela mostra o terminal do Visual Studio Code depois que eu rodei o front-end da aplicação web do projeto Lista de tarefas">
+    <img src="imagens/topico-7-imagem-2.png" alt="Essa captura de tela mostra o terminal do Visual Studio Code depois que eu rodei o front-end da aplicação web do projeto Lista de tarefas">
     <p>Dentro do navegador, eu visitei a página principal da aplicação web. Inicialmente, essa página não tinha tarefas adicionadas, conforme pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-3.PNG" alt="Essa captura de tela mostra que a página principal da aplicação web estava sem tarefas adicionadas">
+    <img src="imagens/topico-7-imagem-3.png" alt="Essa captura de tela mostra que a página principal da aplicação web estava sem tarefas adicionadas">
     <p>Dentro do pgAdmin 4, eu acessei a tabela tarefas correspondente ao banco de dados chamado projetolistadetarefasbancodedados. Inicialmente, essa tabela estava vazia, conforme pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-4.PNG" alt="Essa captura de tela mostra que a tabela tarefas estava vazia">
+    <img src="imagens/topico-7-imagem-4.png" alt="Essa captura de tela mostra que a tabela tarefas estava vazia">
     <p>De volta ao navegador, eu continuava dentro da página principal da aplicação web. Porém, eu cliquei no botão Adicionar tarefa e fui direcionado para a página de adição de tarefa. Nessa página, eu tentei adicionar uma tarefa cuja descrição continha apenas dois caracteres. Por causa disso, a aplicação web me mostrou uma mensagem de alerta, conforme pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-5.PNG" alt="Essa captura de tela mostra a mensagem de alerta que foi exibida pela página de adição de tarefa">
+    <img src="imagens/topico-7-imagem-5.png" alt="Essa captura de tela mostra a mensagem de alerta que foi exibida pela página de adição de tarefa">
     <p>Vale lembrar que a página de adição de tarefa consegue se adaptar a um tamanho de tela reduzido. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-6.PNG" alt="Essa captura de tela mostra que a página de adição de tarefa consegue se adaptar a um tamanho de tela reduzido">
+    <img src="imagens/topico-7-imagem-6.png" alt="Essa captura de tela mostra que a página de adição de tarefa consegue se adaptar a um tamanho de tela reduzido">
     <p>Ainda dentro da página de adição de tarefa, eu escrevi no campo input a descrição Agendar reunião. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-7.PNG" alt="Essa captura de tela mostra a página de adição de tarefa depois que eu escrevi no campo input a descrição Agendar reunião">
+    <img src="imagens/topico-7-imagem-7.png" alt="Essa captura de tela mostra a página de adição de tarefa depois que eu escrevi no campo input a descrição Agendar reunião">
     <p>Nesse ponto, eu cliquei no botão Confirmar. Assim, eu fui redirecionado para a página principal. Essa página passou a contar com a tarefa cuja descrição é Agendar reunião. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-8.PNG" alt="Essa captura de tela mostra que a página principal passou a contar com a tarefa cuja descrição é Agendar reunião">
+    <img src="imagens/topico-7-imagem-8.png" alt="Essa captura de tela mostra que a página principal passou a contar com a tarefa cuja descrição é Agendar reunião">
     <p>Dentro do pgAdmin 4, eu constatei que a tarefa cuja descrição é Agendar reunião foi incluída com sucesso na tabela tarefas. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-9.PNG" alt="Essa captura de tela mostra que a tarefa cuja descrição é Agendar reunião foi incluída com sucesso na tabela tarefas">
+    <img src="imagens/topico-7-imagem-9.png" alt="Essa captura de tela mostra que a tarefa cuja descrição é Agendar reunião foi incluída com sucesso na tabela tarefas">
     <p>De volta ao navegador, eu adicionei outras duas tarefas dentro da aplicação web. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-10.PNG" alt="Essa captura de tela mostra as outras duas tarefas que eu adicionei dentro da aplicação web">
+    <img src="imagens/topico-7-imagem-10.png" alt="Essa captura de tela mostra as outras duas tarefas que eu adicionei dentro da aplicação web">
     <p>Dentro do pgAdmin 4, eu constatei que essas outras duas tarefas também foram incluídas com sucesso na tabela tarefas. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-11.PNG" alt="Essa captura de tela mostra que outras duas tarefas foram incluídas com sucesso na tabela tarefas">
+    <img src="imagens/topico-7-imagem-11.png" alt="Essa captura de tela mostra que outras duas tarefas foram incluídas com sucesso na tabela tarefas">
     <p>De volta ao navegador, eu marquei como concluída a tarefa cuja descrição é Ler um livro. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-12.PNG" alt="Essa captura de tela mostra que foi marcada como concluída a tarefa cuja descrição é Ler um livro">
+    <img src="imagens/topico-7-imagem-12.png" alt="Essa captura de tela mostra que foi marcada como concluída a tarefa cuja descrição é Ler um livro">
     <p>Dentro do pgAdmin 4, ao acessar a tabela tarefas, eu constatei que houve alteração no campo concluida correspondente à tarefa cuja descrição é Ler um livro. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-13.PNG" alt="Essa captura de tela mostra que, dentro da tabela tarefas, houve alteração no campo concluida correspondente à tarefa cuja descrição é Ler um livro">
+    <img src="imagens/topico-7-imagem-13.png" alt="Essa captura de tela mostra que, dentro da tabela tarefas, houve alteração no campo concluida correspondente à tarefa cuja descrição é Ler um livro">
     <p>De volta ao navegador, vale lembrar que a página principal consegue se adaptar a um tamanho de tela reduzido. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-14.PNG" alt="Essa captura de tela mostra que a página principal consegue se adaptar a um tamanho de tela reduzido">
+    <img src="imagens/topico-7-imagem-14.png" alt="Essa captura de tela mostra que a página principal consegue se adaptar a um tamanho de tela reduzido">
     <p>Ainda dentro da página principal da aplicação web, eu cliquei no botão Editar que corresponde à tarefa cuja descrição é Concluir relatório. Desse modo, eu fui direcionado para a página de edição de tarefa. A captura de tela abaixo mostra como se encontrava a página de edição de tarefa correspondente à tarefa cuja descrição é Concluir relatório.</p>
-    <img src="imagens/topico-7-imagem-15.PNG" alt="Essa captura de tela mostra como se encontrava a página de edição de tarefa correspondente à tarefa cuja descrição é Concluir relatório">
+    <img src="imagens/topico-7-imagem-15.png" alt="Essa captura de tela mostra como se encontrava a página de edição de tarefa correspondente à tarefa cuja descrição é Concluir relatório">
     <p>Ainda dentro dessa mesma página de edição de tarefa, eu acrescentei a palavra hoje no campo input. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-16.PNG" alt="Essa captura de tela mostra que, dentro da referida página de edição de tarefa, eu acrescentei a palavra hoje no campo input">
+    <img src="imagens/topico-7-imagem-16.png" alt="Essa captura de tela mostra que, dentro da referida página de edição de tarefa, eu acrescentei a palavra hoje no campo input">
     <p>Vale lembrar que a página de edição de tarefa consegue se adaptar a um tamanho de tela reduzido. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-17.PNG" alt="Essa captura de tela mostra que a página de edição de tarefa consegue se adaptar a um tamanho de tela reduzido">
+    <img src="imagens/topico-7-imagem-17.png" alt="Essa captura de tela mostra que a página de edição de tarefa consegue se adaptar a um tamanho de tela reduzido">
     <p>Nesse ponto, ainda dentro dessa mesma página de edição de tarefa, eu cliquei no botão Confirmar. Assim, eu fui redirecionado para a página principal. Nessa momento, eu constatei que a edição foi bem sucedida, conforme pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-18.PNG" alt="Essa captura de tela mostra que a edição foi bem sucedida">
+    <img src="imagens/topico-7-imagem-18.png" alt="Essa captura de tela mostra que a edição foi bem sucedida">
     <p>Vale lembrar que a tarefa que eu editei tem o id igual a 3. Sendo assim, dentro do pgAdmin 4, ao acessar a tabela tarefas, eu constatei que houve alteração no campo descricao correspondente à tarefa cujo id é igual a 3. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-19.PNG" alt="Essa captura de tela mostra que, dentro da tabela tarefas, houve alteração no campo descricao correspondente à tarefa cujo id é igual a 3">
+    <img src="imagens/topico-7-imagem-19.png" alt="Essa captura de tela mostra que, dentro da tabela tarefas, houve alteração no campo descricao correspondente à tarefa cujo id é igual a 3">
     <p>De volta ao navegador, ainda dentro da página principal da aplicação web, eu cliquei no botão Excluir que corresponde à tarefa cuja descrição é Ler um livro. Desse modo, eu fui direcionado para a página de exclusão de tarefa. A captura de tela abaixo mostra como se encontrava a página de exclusão de tarefa correspondente à tarefa cuja descrição é Ler um livro.</p>
-    <img src="imagens/topico-7-imagem-20.PNG" alt="Essa captura de tela mostra como se encontrava a página de exclusão de tarefa correspondente à tarefa cuja descrição é Ler um livro">
+    <img src="imagens/topico-7-imagem-20.png" alt="Essa captura de tela mostra como se encontrava a página de exclusão de tarefa correspondente à tarefa cuja descrição é Ler um livro">
     <p>Vale lembrar que a página de exclusão de tarefa consegue se adaptar a um tamanho de tela reduzido. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-21.PNG" alt="Essa captura de tela mostra que a página de exclusão de tarefa consegue se adaptar a um tamanho de tela reduzido">
+    <img src="imagens/topico-7-imagem-21.png" alt="Essa captura de tela mostra que a página de exclusão de tarefa consegue se adaptar a um tamanho de tela reduzido">
     <p>Nesse ponto, ainda dentro dessa mesma página de exclusão de tarefa, eu cliquei no botão Confirmar. Assim, eu fui redirecionado para a página principal. Nessa momento, eu constatei que a exclusão foi bem sucedida, conforme pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-22.PNG" alt="Essa captura de tela mostra que a exclusão foi bem sucedida">
+    <img src="imagens/topico-7-imagem-22.png" alt="Essa captura de tela mostra que a exclusão foi bem sucedida">
     <p>Vale lembrar que a tarefa que eu excluí tinha o id igual a 2. Sendo assim, dentro do pgAdmin 4, ao acessar a tabela tarefas, eu constatei que foi removido o registro correspondente à tarefa cujo id era igual a 2. Isso pode ser visto na captura de tela abaixo.</p>
-    <img src="imagens/topico-7-imagem-23.PNG" alt="Essa captura de tela mostra que, dentro da tabela tarefas, foi removido o registro correspondente à tarefa cujo id era igual a 2">
+    <img src="imagens/topico-7-imagem-23.png" alt="Essa captura de tela mostra que, dentro da tabela tarefas, foi removido o registro correspondente à tarefa cujo id era igual a 2">
 </body>
 </html>
